--- a/layouts/index.mastofeed.xml
+++ b/layouts/index.mastofeed.xml
@@ -21,7 +21,7 @@
       <pubDate>{{ .Lastmod.Format "Mon, 02 Jan 2006 15:04:05 -0700" | safeHTML }}</pubDate>
       {{- with .Site.Author.email }}<author>{{.}}{{ with $.Site.Author.name }} ({{.}}){{end}}</author>{{end}}
       <guid>{{ .Permalink }}</guid>
-      <description>{{ if .Params.mastotext }}{{ .Params.mastotext }}{{ else }}{{ .Description }}{{ end }}</description>
+      <description>{{ if .Params.mastotext }}{{ .Params.mastotext | truncate 300 }}{{ else }}{{ .Description | truncate 300 }}{{ end }}</description>
       {{- range .Params.mastotags }}
       <tags>{{ . }}</tags>
       {{- end }}
